// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenueImage should match snapshot (default) 1`] = `
<div
  className="c-venue-photos__wrapper js-fade-carousel"
>
  <a
    href="https://www.yelp.com/"
  >
    <img
      alt="Venue Photo"
      className="c-venue-photos__image js-ref-image qa-ref-image"
      onError={[Function]}
      onLoad={[MockFunction]}
      src="https://www.example.com/photo.jpg"
    />
  </a>
</div>
`;

exports[`VenueImage should match snapshot (url) 1`] = `
<div
  className="c-venue-photos__wrapper js-fade-carousel"
>
  <a
    href="https://www.example.com/"
  >
    <img
      alt="Venue Photo"
      className="c-venue-photos__image js-ref-image qa-ref-image"
      onError={[Function]}
      onLoad={[MockFunction]}
      src="https://www.example.com/photo.jpg"
    />
  </a>
</div>
`;
